fixed button text alignment

--- a/quizmetricStyle.css
+++ b/quizmetricStyle.css
@@ -70,15 +70,17 @@
     cursor: help;
  }
  button{
-    display: flex;
+    line-height: 50px;
+    box-sizing: border-box;
+    /*display: flex;*/
     background-color: #085f63;
     color: #f1f1f1;
-    borer: none;
-    border-radius: 20%;
+    border: none;
+    border-radius: 25em;
     width: 50%;
     cursor: pointer;
     font-size: 1.6rem;
-    position: relative;
+    position: center;
     align-items: center;
  }
  button:hover{
